--- a/package.json
+++ b/package.json
@@ -47,11 +47,13 @@
     "moment": "^2.29.4",
     "mongoose": "^6.4.4",
     "mongoose-slug-generator": "^1.0.4",
+    "nest-winston": "^1.7.0",
     "qs": "^6.11.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
